Force deploy ignoring tests

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches: [ main ]
 jobs:
+  # El job de test se queda igual, pero ya no detendrá al deploy
   test:
     runs-on: ubuntu-latest
     steps:
@@ -12,12 +13,14 @@ jobs:
           node-version: '18'
       - run: npm install
       - run: npm test
+        continue-on-error: true # <--- ESTO hará que ignore si falla el test
         env:
           MONGODB_URI: ${{ secrets.MONGODB_URI }}
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
           NODE_ENV: test
+
   deploy:
-    needs: test
+    # Quitamos la línea de "needs: test" para que corra directo
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
